# kakoune-qt

./: .gitignore  .kakrc  CMakeLists.txt  LICENSE  README.md  resources.qrc
.github/workflows/: clang-format.yml  format.yml
rc/: kakoune-qt.kak
src/: .app.cpp.kak.KRcLiv  .kakounemenu.cpp.kak.PbR6zG  .mainwindow.cpp.kak.pTfZuH  abstractkakounecontent.hpp  colorpalette.cpp  colorpalette.hpp  container.cpp  container.hpp  drawcontext.h  drawcontext.hpp  drawoptions.cpp  drawoptions.hpp  ipc.cpp  ipc.hpp  kakounecli.cpp  kakounecli.hpp  kakouneclient.cpp  kakouneclient.h  kakouneclient.hpp  kakounecontent.cpp  kakounecontent.hpp  kakounecontentscroller.cpp  kakounecontentscroller.hpp  kakouneinfobox.cpp  kakouneinfobox.hpp  kakounelistcontent.cpp  kakounelistcontent.hpp  kakounemenu.cpp  kakounemenu.hpp  kakouneoverlay.cpp  kakouneoverlay.hpp  kakouneserver.cpp  kakouneserver.hpp  kakounesession.cpp  kakounesession.hpp  kakounetabbar.cpp  kakounetabbar.hpp  kakounetextedit.cpp  kakounetextedit.hpp  kakounewidget.cpp  (+22 more)
src/rpc/: atom.cpp  atom.h  atom.hpp  attribute.h  attribute.hpp  color.cpp  color.h  color.hpp  face.cpp  face.h  face.hpp  line.cpp  line.h  line.hpp  rpc.cpp  rpc.h  rpc.hpp
